<resources>
    <string name="app_name">My Restaurants</string>
    <string name="button_name">Find Restaurants</string>
    <string name="africanqueen">africanqueen</string>
    <string name="zip">Enter Zipcode Here</string>
    <string name="restaurants_near_you">Here are all the restaurants near:</string>
    <string name="main">main image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">123 SW Best Ever Ave. Portland, Oregon, 97222</string>
    <string name="phone">(503) 223-1282</string>
    <string name="website">View on Yelp</string>
    <string name="cuisine">Brunch, American</string>
    <string name="rating">4.5/5</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="save_restaurant">Save Restaurant</string>
    <string name="failure_message">Something went wrong. Please check your Internet connection and try again later</string>
    <string name="unsuccessful_message">Oops!! That location doesn\'t exist in our server. Sorry.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="s_u_p">Sign Up process in Progress</string>
    <string name="logging">Logging you in...</string>
</resources>