...
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_sans_semibold" />


    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/savedRestaurantsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
...
